--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "pnpm@7.29.1", 
+  "packageManager": "pnpm@7.29.1",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -12,15 +12,18 @@
   "dependencies": {
     "@tanstack/react-query": "^5.14.2",
     "contentful": "^10.6.14",
+    "core-js": "3",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-speech-recognition": "^3.9.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
