--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-speech-recognition": "^3.10.0"
+    "react-speech-recognition": "^3.10.0",
+    "vite-tsconfig-paths": "^4.2.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.12.1",
@@ -33,6 +34,7 @@
     "jsdom": "^23.2.0",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5",
     "vitest": "^1.1.3"
   }
